--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <table cellspacing="20">
             <tr>
                 <td><img
-                        src="images/personalPhoto.jpg"
+                        src="Images/personalPhoto.jpg"
                         alt="Matt Dodge Personal Photo"
                         width="200.7" height="270.8">
                 </td>
